--- a/src/index.css
+++ b/src/index.css
@@ -267,7 +267,7 @@ body {
 .pagination button:hover {
 	background-color: #4caf50;
 	color: white;
-	border: none;
+	border: 1px solid #4caf50;
 }
 
 .pagination button[disabled] {
